--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,6 +6,7 @@ do.jar=true
 endorsed.javafx.ant.classpath=.
 javac.debug=true
 javadoc.preview=true
+javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
-javafx.run.inbrowser.path=C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe
-user.properties.file=C:\\Users\\Mantas\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+javafx.run.inbrowser.path=/usr/bin/open
+user.properties.file=/Users/Mantas/Library/Application Support/NetBeans/8.0.2/build.properties
